# apple-security-updates

./: Dockerfile  README.md  apple-security-updates.service  apple-security-updates.toml  apple_security_updates.py  asu-bot.py  asu-bot.sh  asu-notifier.json  asu-notifier.py  asu-notifier.sh  config.json  init.json  package.json  pyproject.toml  requirements.txt  setup.py  setup.sh  start.sh  testing.py
develop/: .gitignore  README.md  requirements.txt  setup.py
