[tool.poetry]
name = "apple-security-updates"
version = "0.1.0"
description = ""
authors = ["Edison Montes M. <edison.montes@gmail.com>"]
readme = "README.md"
packages = [{include = "apple_security_updates"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
numpy = "^1.24.2"
beautifulsoup4 = "^4.12.2"
pytz = "^2023.3"
anyio = "^3.6.2"
certifi = "^2022.12.7"
charset-normalizer = "^3.1.0"
h11 = "^0.14.0"
idna = "^3.4"
sniffio = "^1.3.0"
soupsieve = "^2.4"
urllib3 = "^1.26.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

